# LogInDummy

./: .gitignore  CMakeLists.txt  README.md
XPlaneSDK/: INSTRUCTIONS.txt
src/: BitmapWidget.cc  LogInDummy.c  Preferences.cc  Preferences.h  config.c  config.h  dllmain.cpp
src/loaders/: bmp_loader.c  jpg_loader.c  loaders.c  loaders.h  png_loader.c  tiff_loader.c
